--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ eframe = { version = "0.33.0", default-features = false, features = [
     "x11",           # To support older Linux distributions (restores one of the default features)
 ] }
 log = "0.4.29"
-whist = { path = "../whist-backend", features = ["serde"]}
-# whist = { git = "https://github.com/eterniance/whist", branch = "main", features = ["serde"] }
+# whist = { path = "../whist-backend", features = ["serde"]}
+whist = { git = "https://github.com/eterniance/whist", branch = "main", features = ["serde"] }
 
 # You only need serde if you want app persistence:
 serde = { version = "1.0.219", features = ["derive"] }
