--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ whist = { git = "https://github.com/eterniance/whist", branch = "main", features
 # You only need serde if you want app persistence:
 serde = { version = "1.0.219", features = ["derive"] }
 async-trait = "0.1.89"
+indexmap = "2.12.1"
+thiserror = "2.0.17"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
