--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 async-trait = "0.1.89"
 indexmap = "2.12.1"
 thiserror = "2.0.17"
+egui_extras = { version = "0.33.3", features = ["serde"] }
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
